--- a/app/views/users/edit3.html.erb
+++ b/app/views/users/edit3.html.erb
@@ -20,31 +20,31 @@ window.name = "xsz";
 
 <div class="col-md-3">
 <a href="/purchase10">
-<img src="/10mins.png" class="img img-responsive">
+<img src="/p_clock.png" class="img img-responsive" style="margin: 0 auto;">
 </a>
 </div>
 
 <div class="col-md-3">
 <a href="/purchase60">
-<img src="/1hr.png" class="img img-responsive">
+<img src="/p_clock.png" class="img img-responsive" style="margin: 0 auto;">
 </a>
 </div>
 
 <div class="col-md-3">
 <a href="/purchase180">
-<img src="/3hrs.png" class="img img-responsive" style="margin-top: -30px">
+<img src="/p_clock.png" class="img img-responsive" style="margin: 0 auto;">
 </a>
 </div>
 
 <div class="col-md-3">
 <a href="/purchase600">
-<img src="/10hrs.png" class="img img-responsive" style="margin-top: -30px">
+<img src="/p_clock.png" class="img img-responsive" style="margin: 0 auto;">
 </a>
 </div>
 </div>
 
-<div class="col-md-offset-3 col-md-6 col-xs-12">
-<a type="button" class="btn" style="color: #000; width: 100%; margin-top: 30px;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
+<div class="col-md-offset-3 col-md-6 col-xs-12" style="margin-top: 50px;">
+<a type="button" class="btn" style="color: #000; width: 100%;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
 
 </div>
 </div>
