fixed purchased page

--- a/app/views/users/edit3.html.erb
+++ b/app/views/users/edit3.html.erb
@@ -1,10 +1,33 @@
+<style>
+
+@media only screen and (max-width: 360px) {
+
+.mobilemargin {
+	margin-top: 30px;
+	}
+
+.mobilebox {
+	padding: 20px;
+}
+
+.mobilemarginf {
+
+	margin-left: 0px !important;
+	}
+
+.mobiletext {
+	font-size: 20px !important;
+}
+
+}
+
+</style>
 
 <div class="container" style="padding:0 3% 0 3% ;">
  
-
-<h2 style=" font-family: 'Work Sans', sans-serif;" >Purchase Credits <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">タイムをチャージ</span></h2>
-<br>
-
+<div style="margin-top: 30px; margin-bottom: 30px;">
+<span style=" font-family: 'Work Sans', sans-serif; font-size: 30px;" class="hidden-xs">Purchase </span><span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;" class="mobiletext"> タイムをチャージ</span>
+</div>
 
 <SCRIPT LANGUAGE="JavaScript">
 <!--
@@ -18,27 +41,42 @@ window.name = "xsz";
 <div class="container-fluid">
 <div class="row">
 
-<div class="col-md-3">
+<div class="col-md-3 text-center mobilebox mobilemarginf" style="border: 1px solid #ccc; padding: 20px; margin-left: -30px;">
 <a href="/purchase10">
 <img src="/p_clock.png" class="img img-responsive" style="margin: 0 auto;">
+<h3>30時間パック</h3>
+<hr>
+<h3>¥24,980</h3>
 </a>
 </div>
 
-<div class="col-md-3">
+<div class="col-md-3 text-center mobilemargin mobilebox" style="border: 1px solid #ccc; padding: 20px; margin-left: 10px;">
 <a href="/purchase60">
 <img src="/p_clock.png" class="img img-responsive" style="margin: 0 auto;">
+<h3>10時間パック</h3>
+<hr>
+<h3>¥8,980</h3>
 </a>
 </div>
 
-<div class="col-md-3">
+<div class="col-md-3 text-center mobilemargin mobilebox" style="border: 1px solid #ccc; padding: 20px; margin-left: 10px;">
 <a href="/purchase180">
 <img src="/p_clock.png" class="img img-responsive" style="margin: 0 auto;">
+<h3>5時間パック</h3>
+<hr>
+<h3>¥4,980</h3>
 </a>
 </div>
 
-<div class="col-md-3">
+<div class="col-md-3 text-center mobilemargin mobilebox" style="border: 1px solid #ccc; padding: 20px; margin-left: 10px;
+
+<h2>5時間パック</h2>
+">
 <a href="/purchase600">
 <img src="/p_clock.png" class="img img-responsive" style="margin: 0 auto;">
+<h3>1時間パック</h3>
+<hr>
+<h3>¥980</h3>
 </a>
 </div>
 </div>
