--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,10 @@
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   </div>
 
 <div class="col-md-offset-1 col-md-6">
@@ -131,7 +135,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                   <%= f.text_field :name, class: 'form-control', :placeholder => 'ニックネーム' %>
+                   <%= f.text_field :name, class: 'form-control', :placeholder => 'ニックネーム', :required => '' %>
                 </div>
               </div>
             </div>
@@ -141,7 +145,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                  <%= f.email_field :email, class: 'form-control', :placeholder => 'メールアドレス' %>
+                  <%= f.email_field :email, class: 'form-control', :placeholder => 'メールアドレス', :required => '' %>
                 </div>
               </div>
             </div>
@@ -151,7 +155,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-skype" aria-hidden="true"></i></span>
-                  <%= f.text_field :skype, class: 'form-control', :placeholder => 'スカイプID' %>
+                  <%= f.text_field :skype, class: 'form-control', :placeholder => 'スカイプID', :required => ''  %>
                 </div>
               </div>
             </div>
@@ -161,7 +165,7 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                   <%= f.password_field :password, class: 'form-control', :placeholder => 'パスワード' %>
+                   <%= f.password_field :password, class: 'form-control', :placeholder => 'パスワード', :required => ''  %>
                 </div>
               </div>
             </div>
@@ -171,9 +175,18 @@ span.input-group-addon i {
               <div class="cols-md-10">
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                  <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード' %>
+                  <%= f.password_field :password_confirmation, class: 'form-control', :placeholder => '確認用パスワード', :required => '' %>
                 </div>
               </div>
+            </div>
+
+            <div class="form-group">
+              <div class="cols-md-12">
+
+                  <div class="checkbox">
+                  <label><input type="checkbox" value="agree" name="agreement" required autofocus><a href="#" style="color: #fff;" data-toggle="modal" data-target="#agreement">ライセンス契約 ライセンス契約を読ん で、同意する場合は [利用規約の条件に同意します ]をチェック します。</a></label>
+                  </div>
+
             </div>
 
             <%= f.hidden_field :time, :value => 30 %>
@@ -185,6 +198,166 @@ span.input-group-addon i {
             
           </form>
         </div>
+
+        <div class="modal fade" id="agreement" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content" style="color: #000;">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title text-center">第1条（総則）</h4>
+        </div>
+        <div class="modal-body">
+<p>1．「TIMEE英会話」利用規約（以下「本規約」といいます）は、株式会社ENLOOP（以下「当社」といいます）が運営する「TIMEE英会話サービス」（以下「本サービス」といいます）の利用条件を定めたものです。利用者は、本規約並びに当社が定めるTIMEE利用規約に同意のうえ、本サービスを利用するものとします。<br>
+2．利用者が本サービスを利用した場合には、本規約に同意したものとみなします。また当社は、利用者に対する事前又は事後の通知なしに本規約を改定できるものとし、本規約の改定後、本サービス上に表記した時点で改定後の本規約を適用するものとし、変更後に利用があった場合は改定後の規約に同意したものとみなします。<br>
+3．当社は本サービスの適正な運営を目的とし、本サービス内の発言、会話、問い合わせ内容、書き込み情報を録音並びに記録し、必要と判断した場合には画像又は映像を収集し保管します。これらの情報は、当社が本サービスの適正な運営をする上でやむを得ない理由があると判断した場合のみ、最小限の範囲で利用することがあります。利用者は当社がこれらの情報を保管し、利用することに同意するものとします。
+第2条（本規約の適用範囲）<br>
+1．本規約は、本サービスに関連して当社が提供するコンテンツ及び電子メール等を介して当社が利用者に対して発信する情報すべてに適用されます。<br>
+2．当社と利用者間において本規約とは別に個別の定め（以下「個別契約」といいます）を定める場合は、個別契約の規定が優先するものとします。
+第3条（本サービスの登録申し込み）<br>
+1．利用者は、当社が別途定める手段にて本サービスへの登録申し込みを行うものとします。なお、利用者は、本サービスの登録申し込みにあたり、下記の事項に同意し、これを遵守するものとします。 <br>
+（1）当社が推奨するバージョンのSkypeをインストールすること<br>
+（2）通信環境が本サービスの利用に支障がないことを確認すること<br>
+（3）利用者が未成年の場合、親権者等法定代理人の同意を得ること<br>
+（4）本サービスの利用料金を本規約第7条に定める決済方法により支払うこと<br>
+（5）レッスンを提供する者には、当社及び当社業務委託先の正社員、パート・アルバイト（以下「講師」といいます）が含まれていること<br>
+（6）利用者が登録したSkype名（Skypeで自分だけが持つ固有の名前のことをいいます。）をレッスン提供の目的で本サービスの予約ページ等に掲載すること<br>
+（7）当社は利用者に対して本サービスに関する電子メールによる通知、広告、アンケート等を実施することができること<br>
+2．本サービスの登録は、当社の電子メールによる承諾の通知をもって完了するものとします。<br>
+3．利用者が下記に定める事由に該当する場合、当社は、当該登録申し込みを拒否することができ、また、登録がすでに完了した場合でも、当該登録を取消すことができます。<br>
+（1）申込者が実在しない、又は実在しない恐れがあると判断した場合<br>
+（2）申込の時点で、会員規約の違反等により、アカウントの一時停止、強制退会処分もしくは会員契約申込の不承諾を現に受け、又は過去に受けた事がある場合<br>
+（3）申込の際の申告事項に、虚偽、誤記、又は記入漏れがあった場合<br>
+（4）申込した時点で、本サービスの利用料金の支払いを怠っていること、又は過去に支払いを怠ったことがある場合<br>
+（5）申込の際に決済手段として当該申込者が届け出たクレジットカードがクレジットカード会社により無効扱いとされていること、又は当社の指定する決済関係先が当該申込者との契約の締結を拒否した場合<br>
+（6）同一人物により複数のアカウントが登録された恐れがある場合<br>
+（7）その他、当社が不適当と判断した場合<br>
+4．利用者は、登録完了後、第7条に定める利用料金の初回の支払いが当社により当社のシステム上で確認された日（以下「利用開始日」といいます）から本サービスの利用を開始できるものとします。ただし、第9条の無料体験レッスンについては、この限りではありません。<br>
+第４条（登録情報の取り扱い）<br>
+1．当社は、利用者の登録情報を本サービスの提供の目的にのみ利用します。<br>
+2．当社は、本サービスの提供を目的として、本サービス業務の一部を委託する第三者に対し、利用者が登録した以下の情報を提供いたします。<br>
+（1）Skype ID<br>
+（2）ニックネーム<br>
+（3）性別<br>
+（4）生年月日<br>
+3．当社は、前項に該当する場合を除き、登録情報を利用者の事前の承諾なく第三者に開示しないものとします。ただし、以下に該当する場合は、この限りではありません。<br>
+（1）法令に基づく要請を受けたとき<br>
+（2）提供を拒むことによって公共の利益に反する問題が発生する場合であって、お客様ご本人の同意を得ることが困難であるとき<br>
+（3）国の機関もしくは地方公共団体、又はその委託を受けたものが、法令の定める事務を遂行することに協力する必要がある場合であって、お客様ご本人の同意を得ることによって当該事務の遂行に支障を及ぼす恐れがあるとき<br>
+（4）当社の正当な権利行使に必要なとき<br>
+4．当社は、登録情報の取り扱いに関し、本規約に定めのないものについては「個人情報保護方針」に則るものします。<br>
+第5条（登録情報の変更）<br>
+利用者は、自身の登録情報に変更が生じた場合、当社が別途定める方法によって速やかに当該登録情報を変更するものとします。なお、当社は、利用者が当該変更手続きを遅滞したことにより損害等を被ったとしても、一切の責任を負わないものとします。<br>
+第6条（本サービスの利用期間）<br>
+1．利用者が本サービスの提供を受けることができる期間（以下「利用期間」といいます）は、本サービスで購入した購入時間分となります。<br>
+2．利用期間は、時間購入することにより更新することができます。なお、利用料金の支払いは、弊社が定めるPAY.JPの決済代行手段にて行われるものとします。<br><br>
+
+第7条（無料体験レッスン）<br>
+1．利用者は、本サービスへの登録が完了した日より当社が別途定める時間分の無料体験レッスンを受講することができます。<br>
+2．利用者は、無料体験レッスン受講中も、本規約を遵守する義務を負います。<br>
+3．当社は、同一人物により複数のアカウントが登録された場合、無料レッスンを受講する目的のみで複数回にわたりアカウントが登録された場合その他不適切な目的でアカウントが作成されたと当社が判断した場合には、当該アカウント（不適切な目的で複数のアカウントが判明した場合は全部のアカウントとします）に対し無料体験レッスンの提供を行わないことができるものとします。<br>
+第8条（レッスン）<br>
+1．レッスンは、時間購入分のみ行えるものとします。スカイプが繋がった通話時間分、時間が消化されるものとします。<br>
+2．講師が不在の場合はレッスンが受けれない場合もあることを承知する。<br>
+3.不可抗力による、やむを得ない場合のみ時間を補填します。なお、帰責事由の有無については当社の合理的な判断に基づくものとします。<br><br>
+
+第9条（禁止行為）<br>
+1．利用者は、本サービスのレッスン受講その他利用に際して、以下に定める行為を行ってはなりません。<br>
+（1）利用者が本サービスを利用する権利を他者に譲渡し、使用させ、売買し、名義を変更し、質権を設定し又は担保に供すること<br>
+（2）パスワード等を第三者に譲渡、貸与等すること又は第三者に使用させること<br>
+（3）当社又は講師その他第三者の名誉、信用、著作権、特許権、実用新案権、意匠権、商標権、肖像権、プライバシーを侵害すること<br>
+（4）違法行為、公序良俗に反する行為<br>
+（5）本サービスの運用を妨げる行為<br>
+（6）本サービスを営業行為、営利目的及びその準備に利用する行為<br>
+（7）本サービスの他の利用者・講師に違法行為を勧誘又は助長する行為<br>
+（8）本サービスの他の利用者・講師が経済的・精神的損害、不利益を被る行為<br>
+（9）犯罪行為及び犯罪行為に結びつく行為<br>
+（10）レッスンの進行を妨げる行為、又はレッスンの受講に不適当な行為<br>
+（11）レッスン中に飲酒・喫煙をする行為、又は泥酔状態でレッスンを受講する行為<br>
+（12）過度に肌の露出をする行為、肌の露出を伴うコスチュームや下着姿など、講師に対して不安又は負担を与える行為<br>
+（13）レッスンの内容、画像、動画及び音声並びに当社に対する問い合わせ内容及び当社からの回答を当社に無断で公開する行為、又はそのおそれのある行為<br>
+（14）講師の雇用条件やコールセンターの場所、インターネット回線など当社の一般的に開示していない機密情報を詮索する行為<br>
+（15）講師に対して宗教、政治結社、マルチ商法等の勧誘をする行為<br>
+（16）電子メールの送受信を含め、オンライン、オフラインを問わず、利用者本人又はその代理人が講師と個人的に接触しようとする行為<br>
+（17）講師に当社の競合たりうるサービス・企業等へ勧誘する行為<br>
+（18）当社又は講師への暴言・脅迫・差別行為、又は業務の進行を妨げる行為<br>
+（19）登録者本人以外に当該登録アカウントを利用させる行為<br>
+（20）複数のアカウントを登録する行為<br>
+（21）レッスンにアカウント登録者以外の当社が許可していない者を参加させる行為<br>
+（22）その他、当社が不適当と判断する行為<br>
+2．前項の禁止行為に該当するか否かの判断は、当社の裁量により判断されるものとします。なお、本項の判断について当社は説明責任を負うものではありません。<br>
+3．当社は、前項の判断に起因して利用者が損害又は不利益等を被った場合、当社に重大な過失がある場合を除き、一切の責任を負いません。<br>
+4．利用者は、第1項に違反する行為に起因して当社又は第三者に損害が生じた場合、本サービスからの休会又は退会後であっても、すべての法的責任を負うものとします。<br>
+第10条（本サービスの中止・中断・停止・登録取消等）<br>
+1．当社は、利用者が下記のいずれかに該当すると判断した場合、サービスの提供状態を問わず、利用者に対して事前の通知等を要せず、本サービスの利用の中止・中断・停止又は登録の取消の処分を行うことができるものとします。なお、利用者が下記のいずれかに該当するかの判断にあたっては、利用者が保有している全てのアカウントにおける行為を考慮し、当社が下記のいずれかに該当すると判断した場合には、利用者の全てのアカウントが上記処分の対象となります。<br>
+（1）利用者が警告等による改善の見込みがないと当社が判断した場合<br>
+（2）利用者が定める禁止行為を行った場合<br>
+（3）利用者が本規約の各規定に違反した場合<br>
+（4）利用者が本サービスの利用に際し、当社又は講師からの指示に従わなかった場合<br>
+（5）その他の事由で当社が利用者による本サービスの利用を不適切と判断した場合<br>
+2．利用者が前項を理由とした処分を受けた場合において、当社はすでに利用者が支払った利用料金の返金を一切行わないものとします。<br>
+3．当社は定める事由を理由とした処分により、利用者に損害又は不利益等が発生した場合であっても、一切の責任を負うものではありません。<br><br>
+
+第11条（当社による通知）<br>
+1．当社は、本サービスに関し通知する場合、利用者のTIMEE会員登録情報に登録されている電子メールアドレス（以下「指定メールアドレス」といいます）宛に行うものとし、当該通知を送信完了した時点をもって、当該通知が宛先の利用者に到達したものとみなします。<br>
+2．利用者は常に指定メールアドレス情報を当社からの電子メールが受信できる状態に保つものとします。<br>
+3．指定メールアドレス情報に変更等があった場合には、利用者は速やかに当該変更を登録するものとし、当該変更を登録しなかったことにより利用者が損害又は不利益等を被ったとしても、当社は一切の責任を負いません。<br>
+第12条（本サービスの変更・中断・終了）<br>
+1．当社は、事前に当ウェブ上での掲示又は指定メールアドレス宛へ通知をすることにより、当社の裁量により本サービスの内容を変更、又は本サービスの提供を中断もしくは終了できるものとします。ただし、以下に該当する場合においてやむを得ない場合には、予告なしに本サービスを中断することができるものとします。<br>
+（1）Skypeの障害、国内外の政治情勢・自然災害等、提供するサーバー等の障害・メンテナンス等、又はその他やむを得ない事由により本サービスの提供が困難な場合<br>
+（2）フィリピン共和国その他の講師在住国における祝祭日（ホーリーウィーク、クリスマス等）などを理由とする場合<br>
+2．前項を理由とした提供レッスン数の減少がある場合には、当社は事前に当ウェブ又は電子メールでの連絡を行うものとします。なお、提供レッスン数の減少に伴なう補填用、返金等の対応は行わないものとし、利用者はこれらに予め同意するものとします。<br>
+3．当社は、本サービスの変更、中断又は終了により、利用者又は第三者が被ったいかなる不利益、損害についても責任を負わないものとします。<br>
+第13条（Skypeの利用）<br>
+本サービスは、Skypeが提供するサービスを利用して提供されます。利用者は、Skypeの利用に際し、下記の内容について同意するものとします。<br>
+（1）Skypeの提示する各規約、ガイドラインを遵守すること。<br>
+（2）本サービスの利用前までにSkypeをダウンロード、インストールし、機能等について確認すること。<br>
+（3）Skypeのダウンロード、インストール、設定、使用等について、すべて自己の責任と費用において行うこと。<br>
+（4）レッスン開始後に発生したSkypeの機能の不具合等について、当社が一切責任を負わないこと。<br>
+（5）Skypeのチャット機能などを通じて講師から送られてきたファイルを受信する場合又は当ウェブ以外のURLを開く場合、すべて自己の責任で行うこと。<br>
+（6）Skypeが提供するサービスに関する相談、問い合わせ等について、当社が一切対応する義務を負わないこと。<br>
+第14条（利用者の責任）<br>
+1．利用者は、本サービスの利用と本サービスを利用してなされた行為及びその結果について一切の責任を負うものとします。
+2．利用者は、本サービスの利用により当社、当社スタッフ、講師、他の利用者又は第三者に対し損害を与えた場合（利用者が本規約上の義務を履行しないこと<br>により当社、当社スタッフ、講師、他の利用者又は第三者が損害を被った場合を含みます）、自己の責任と費用をもってかかる損害を賠償するものとします。<br>
+第15条（著作権及び所有権）<br>
+2．当社は、利用者が前項に違反した場合、利用者に対して、著作権法、商標法等（その他当社の権利に基づく場合を含む）に基づく各処置（警告、告訴、損害賠償請求、差止請求、名誉回復措置等請求等）を行うことができるものとします。<br>
+第16条（免責事項）<br>
+利用者は、下記の各条項に定める事項に起因又は関連して生じた一切の損害について、当社がいかなる賠償責任も負わないことに予め同意します。<br>
+（1）本サービスの利用に際し、以下の事由により、満足な利用ができなかった場合<br>
+①利用者が希望する特定の時間帯のレッスンができなかった場合<br>
+②フィリピン共和国をはじめとする講師在住国での停電や通信障害等によりレッスンを中止せざるを得なかった場合。<br>
+③利用者のメッセージやデータへの不正アクセスや不正な改変、その他第三者の不正行為に起因する場合<br>
+（2）本サービス、本サービスにて提供されるレッスンの学習効果や有効性、正確性、真実性等<br>
+（3）本サービスに関連して当社が紹介・推奨する他社のサービスや教材等の効果や有効性並びに安全性や正確性等<br>
+（4）当社が推奨する利用環境外での本サービスの利用に起因又は関連する場合<br>
+（5）Skype又は当社の提携先企業が提供するサービスの不具合、トラブル等により本サービスが利用できなかった場合<br>
+（6）本規約第13条5号に従い、利用者の自己責任で受信した、又は、開いたファイル等が原因となりウィルス感染などの損害が発生した場合<br>
+（7）利用者の過失によるパスワード等の紛失又は使用不能により本サービスが利用できなかった場合<br>
+（8）当ウェブで提供するすべての情報、リンク先等の完全性、正確性、最新性、安全性等<br>
+（9）当ウェブから、又は当ウェブへリンクしている当社以外の第三者が運営するウェブサイトの内容やその利用等<br>
+第17条（不保証）<br>
+利用者は、下記の各条項の内容に関し、当社が何ら一切の保証を行うものではないことに予め同意するものとします。<br>
+（1）利用者が希望する特定の時間帯のレッスンができること<br>
+（2）利用者が希望する特定の講師又は特定国籍の講師のレッスンが予約できること<br>
+（3）本サービスのレッスンの学習効果や有効性、正確性、真実性等<br>
+（4）本サービスの提供に関して当社が提示する推奨環境にて問題なくサービスの提供が行われること<br>
+（5）本サービス又は本サービスに関連して利用されるソフト並びにファイル等の安全性<br>
+（6）当ウェブで提供するあらゆる情報、リンク先等の完全性、正確性、最新性、安全性等<br>
+（7）当ウェブから、又は当ウェブへリンクしている当社以外の第三者が運営するウェブサイトの内容やその利用等に関する正確性、安全性等<br>
+第18条（事業譲渡）<br>
+当社は、本サービスの事業を第三者に譲渡した場合には、当該事業譲渡に伴い、本サービスの運営者たる地位、本規約に基づく権利及び義務並びに利用者の登録情報その他情報を当該事業譲渡の譲受人に譲渡することができるものとし、利用者は、利用者たる地位、本規約に基づく権利及び義務並びに利用者の登録情報その他情報の譲渡につき予め同意し了承するものとします。<br><br>
+
+第19条（準拠法及び専属的合意管轄裁判所）<br>
+本規約は、日本国法に準拠して解釈されるものとします。また、当社及び利用者は、本サービスもしくは本規約に起因又は関連して当社と利用者の間で生じた紛争の解決について、東京地方裁判所を第一審専属管轄裁判所とすることに予め合意するものとします。</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
 
 <!--         <div class="col-md-offset-1 col-md-6">
 
