--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -184,7 +184,8 @@ span.input-group-addon i {
               <div class="cols-md-12">
 
                   <div class="checkbox">
-                  <label><input type="checkbox" value="agree" name="agreement" required autofocus><a href="#" style="color: #fff;" data-toggle="modal" data-target="#agreement">ライセンス契約 ライセンス契約を読ん で、同意する場合は [利用規約の条件に同意します ]をチェック します。</a></label>
+                  <label><input type="checkbox" value="agree" name="agreement" required autofocus>利用規約に同意します</label>
+                    <a href="#" style="color: #fff;" data-toggle="modal" data-target="#agreement">「利用規約はこちら」</a>
                   </div>
 
             </div>
@@ -200,7 +201,7 @@ span.input-group-addon i {
         </div>
 
         <div class="modal fade" id="agreement" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
     
       <!-- Modal content-->
       <div class="modal-content" style="color: #000;">
