--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -185,7 +185,7 @@ span.input-group-addon i {
 
                   <div class="checkbox">
                   <label><input type="checkbox" value="agree" name="agreement" required autofocus>利用規約に同意します</label>
-                    <a href="#" style="color: #fff;" data-toggle="modal" data-target="#agreement">「利用規約はこちら」</a>
+                    <a href="#" style="color: #fff;" data-toggle="modal" data-target="#agreement">コチラ</a>
                   </div>
 
             </div>
