changed agreement link button

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -184,8 +184,8 @@ span.input-group-addon i {
               <div class="cols-md-12">
 
                   <div class="checkbox">
-                  <label><input type="checkbox" value="agree" name="agreement" required autofocus>利用規約に同意します</label>
-                    <a href="#" style="color: #fff;" data-toggle="modal" data-target="#agreement">コチラ</a>
+                  <label><input type="checkbox" value="agree" name="agreement" required autofocus>私は <a href="#" style="color: blue;" data-toggle="modal" data-target="#agreement">利用規約</a> を理解し、同意します。</label>
+                    
                   </div>
 
             </div>
