--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,7 +4,10 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
-      <%= render 'shared/error_messages' %>
+
+    <%#= form_for @user,:url => {:action => 'update'} do |f| %>
+
+      <%#= render 'shared/error_messages' %>
 
       <%= hidden_field_tag :email, @user.email %>
       <!--実はメールアドレスも送信してる-->
