--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -127,8 +127,7 @@ span.input-group-addon i {
         <div class="col-md-12">
         <div class="main-login main-center col-md-offset-3 col-md-6">
         <img src="timee-logo.jpg" class="img img-responsive" style="width: 100px; float: left;margin-top: 35px; margin-bottom: 10px; ">
-        <h5 class="text-right hidden-xs">新規会員登録</h5>
-        <h3 class="text-center hidden-md hidden-sm hidden-lg">新規会員登録</h3>
+        <h5 class="text-right">新規会員登録</h5>
         <%= form_for(@user) do |f| %>
             
             <div class="form-group">
