--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title,"Forgot Password") %>
+<% provide(:title,"パスワードを忘れた方") %>
 
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
@@ -101,7 +101,7 @@ span.input-group-addon i {
         <div class="col-md-12">
         <div class="main-login main-center col-md-offset-3 col-md-6 nopadding">
           <img src="../timee-logo.jpg" class="img img-responsive" style="width: 100px; float: left;margin-top: 35px; margin-bottom: 10px; ">
-        <h5 class="text-right hidden-xs">Forgot Password</h5>
+        <h5 class="text-right hidden-xs">パスワードを忘れた方</h5>
          <%= form_for(:password_reset, url: password_resets_path) do |f| %>
             
             <div class="form-group mmobile">
