added contact us page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,7 @@
-
-<center style=" width:100%; ">
-<div style="text-align:center; width:70%;">
+<div style="text-align:center;">
         <h4 id="copy" style="text-align:center; font-family: 'Work Sans', sans-serif;" >
-        	<i class="fa fa-copyright" aria-hidden="true"></i> 2017 Web-Mech.ALL RIGHT RESERVED.
+        	&copy; 2017 Web Mechanics. All Rights Reserved.<br><br>
+        	<a href="/contactus" target="_blank"><i class="fa fa-phone"></i> CONTACT US</a>
         </h4>
 </div>
-</center>
 
