--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,11 +48,27 @@ a {
 
 		<div class="col-md-offset-1 col-md-2 col-xs-6 mobilemargintime" style="margin-top: 40px; margin-left: auto; margin-right: auto;">
 			 <% unless current_user.type_user == "teacher" %>
-                    <% @mins = current_user.time % 60 %>
+
+			 	<% if current_user.time > 30 %>
+                    <% @hours = current_user.time / 60 
+                    @mins = (current_user.time) % 60
+                    %>
+
+
                    	<%=  link_to edit3_user_path(current_user.id), style: "border: 1px solid #ccc; border-radius: 10px; padding: 15px;" do %>
-                    <i class="fa fa-hourglass" aria-hidden="true"></i> 00 : <%= @mins %> <span class="hidden-xs" style="font-size:10px;"> 残時間</span>
+                    <i class="fa fa-hourglass" aria-hidden="true"></i> <%= format('%02d', @hours) %> : <%= format('%02d', @mins) %> <span class="hidden-xs" style="font-size:10px;"> 残時間</span>
+                    <% end %>
+
+	                <% else %>
+
+                   	<%=  link_to edit3_user_path(current_user.id), style: "border: 1px solid #ccc; border-radius: 10px; padding: 15px;" do %>
+                    <i class="fa fa-hourglass" aria-hidden="true"></i> 00:00 <span class="hidden-xs" style="font-size:10px;"> 残時間</span>
+                 <% end %>
+
                     <% end %>
                     <% end %>
+
+
 		</div>
 		<% end %>
 
