--- a/app/views/users/edit6.html.erb
+++ b/app/views/users/edit6.html.erb
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="https://credit.j-payment.co.jp/gateway/js/jquery.js"></script> 
-<script type="text/javascript" src="https://credit.j-payment.co.jp/gateway/js/CPToken.js"></script>
+<!-- <script type="text/javascript" src="https://credit.j-payment.co.jp/gateway/js/jquery.js"></script> 
+<script type="text/javascript" src="https://credit.j-payment.co.jp/gateway/js/CPToken.js"></script> -->
 
 <center>
 <div class="container" style="padding:0 0 0 0 ;">
