--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -194,6 +194,8 @@ span.input-group-addon i {
 
             <%= f.hidden_field :time, :value => 30 %>
             <%= f.hidden_field :type_user, :value => "student" %>
+            <%= f.hidden_field :transaction, :value => "Free Trial 30 minutes" %>
+
 
             <div class="form-group">
             <%= f.submit "登録する", class: "btn btn-primary btn-block btn-lg", name: "new", :value => "登録する" %>
