--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -128,7 +128,9 @@ span.input-group-addon i {
         <div class="main-login main-center col-md-offset-3 col-md-6">
         <img src="timee-logo.jpg" class="img img-responsive" style="width: 100px; float: left;margin-top: 35px; margin-bottom: 10px; ">
 
-        <h5 class="text-right">新規会員登録</h5>
+        <h5 class="text-right">新規会員登録<br>
+        <span style="color:red;">Are you a teacher? <a href="/signupteacher">Click Here</a></span>
+        </h5>
 
         <%= form_for(@user) do |f| %>
             
